welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:18: error: ')' expected but 'if' found.
	if (estFaceMur())
        ^